--- a/vnts/wizard/config
+++ b/vnts/wizard/config
@@ -1,6 +1,6 @@
 [
     {
-        "stepTitle": "VNTS配置参数",
+        "stepTitle": "配置参数",
         "items": [
             {
                 "type": "text",
