--- a/vnts/app/ui/config
+++ b/vnts/app/ui/config
@@ -5,7 +5,7 @@
             "icon": "images/icon_{0}.png",
             "type": "url",
             "protocol": "http",
-            "port": "29870",
+            "port": "${vnts_web_port}",
             "control": {
                 "accessPerm": "editable",
                 "portPerm": "editable", 
